# site-crawler-mcp

./: .gitignore  LICENSE  README.md  SETUP_INSTRUCTIONS.md  claude_desktop_config.json  pyproject.toml  requirements.txt  setup.py
src/site_crawler/: __init__.py  crawler.py  main.py  server.py  utils.py
tests/: __init__.py  test_crawler.py
